--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <h1>Done Dirt Cheap <small>by TNT <small>PLLC</small></small></h1>
+	<h3 id="this">Home   |   <a href="service-request.html" style="color:white">Service Request</a>	|	<a href="#contact" style="color:white">Contact Us</a></h3>
     <br>
 
     <hr>
