--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 
 <body>
     <h1>Done Dirt Cheap <small>by TNT <small>PLLC</small></small></h1>
-	<h3 id="this">Home   |   <a href="service-request.html" style="color:white">Service Request</a>	|	<a href="#contact" style="color:white">Contact Us</a></h3>
+    <table id="this" class="center">
+		<tr>
+		<th>Home</th>
+		<th><a href="service-request.html" style="color:white">Service Request</a></th>
+		<th><a href="#contact" style="color:white">Contact Us</a></h2></th>
+        <th style="border:0px;background-color:transparent;"><b>(360)710-0518</b></th>
+    </tr>
+	</table>
     <br>
 
     <hr>
@@ -20,9 +27,9 @@
 
     <h3 id="contact">Contact Us</h3>
     <div style="width: 500px;">
-    <b>our address:</b> <i>6159 Banner Rd SE Port Orchard, WA, 98367</i><br>
-    <b>our email:</b> <i><a href="mailto: tinahawaii@hotmail.com">donedirtcheapbytnt@tobede.tbd</a><i><br>
-    <b>our phone number:</b> <i><a tel:3607100518>(360)710-0518</a> </i>
+    <b>our address:</b> <i>Business Address </i><br>
+    <b>our email:</b> <i><a href="mailto: tinahawaii@hotmail.com">tinaayers@donedirtcheapbytnt.com</a><i><br>
+    <b>our phone number:</b> <i>(555)555-0518</a> </i>
     </div>
 
 </body>
