--- a/service-request.html
+++ b/service-request.html
@@ -12,7 +12,14 @@
 
 <body>
 	<h1>Done Dirt Cheap <small>by TNT <small>PLLC</small></small></h1>
-	<h2 id="this" class="center"><a href="index.html" style="color:white">Home   |   </a>Service Request	|	<a href="#contact" style="color:white">Contact Us</a></h3>
+	<table id="this" class="center">
+		<tr>
+		<th><a href="index.html" style="color:white">Home</a></th>
+		<th>Service Request</th>
+		<th><a href="#contact" style="color:white">Contact Us</a></h2></th>
+		<th style="border:0px;background-color:transparent;"><b>(360)710-0518</b></th>
+	</tr>
+	</table>
 		<dl style="border:2px solid rgb(70, 22, 88);" class="center">
 		<p class="center" style="width: 200px;"><b>Service Request Form</b></p>
 		<br><br>
@@ -45,7 +52,7 @@
 			<dd id="polish3" onclick="exclude('polish3')">polish</dd>
 			<br>
 		<dt>Trash</dt>
-			<dd style="width:70%">empty and change liner</dd>
+			<dd>empty and change liner</dd>
 			<dd>disinfect</dd>
 			<br>
 		<dt> Baseboards</dt>
