--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <table id="this" class="center">
 		<tr>
 		<th>Home</th>
-		<th><a href="service-request.html" style="color:white">Service Request</a></th>
-		<th><a href="#contact" style="color:white">Contact Us</a></h2></th>
-        <th style="border:0px;background-color:transparent;"><b>(360)710-0518</b></th>
-    </tr>
+		<th style="min-width: 120px"><a href="service-request.html" style="color:white">Service Request</a></th>
+		<th style="min-width: 95px"><a href="#contact" style="color:white">Contact Us</a></h2></th>
+		<th style="border:0px;background-color:transparent;"><b>(360)710-0518</b></th>
+		</tr>
 	</table>
     <br>
 
