--- a/service-request.html
+++ b/service-request.html
@@ -3,78 +3,79 @@
 
 <title>Done Dirt Cheap by TNT PLLC</title>
 
-
 <head>
+	<h1>Done Dirt Cheap <small>by TNT <small>PLLC</small></small></h1>
 	<link rel="icon" type="image/x-icon" href="tntlogo.ico">
 	<link rel="stylesheet" href="styles.css">
 	<script src="scripts.js"></script> 
 </head>
 
 <body>
-	<h1>Done Dirt Cheap <small>by TNT <small>PLLC</small></small></h1>
-	<table id="this" class="center">
+	<table class="center">
 		<tr>
-		<th><a href="index.html" style="color:white">Home</a></th>
-		<th>Service Request</th>
-		<th><a href="#contact" style="color:white">Contact Us</a></h2></th>
-		<th style="border:0px;background-color:transparent;"><b>(360)710-0518</b></th>
-	</tr>
+			<th><a href="index.html" style="color:white">Home</a></th>
+			<th style="min-width: 120px">Service Request</th>
+			<th style="min-width: 95px"><a href="#contact" style="color:white">Contact Us</a></h2></th>
+			<th style="border:0px;background-color:transparent;"><b>(360)710-0518</b></th>
+		</tr>
 	</table>
-		<dl style="border:2px solid rgb(70, 22, 88);" class="center">
-		<p class="center" style="width: 200px;"><b>Service Request Form</b></p>
-		<br><br>
-		<dt onclick="select('rooms')">Rooms</dt>
-			<dd id="livingRoom" onclick="exclude('livingRoom')">living room</dd>
-			<dd id="bathRoom" onclick="exclude('bathRoom')">bathroom</dd>
-			<dd id="kitchen" onclick="exclude('kitchen')">kitchen</dd>
-			<dd id="bedRoom" onclick="exclude('bedRoom')">bedroom</dd>
-			<dd id="closet" onclick="exclude('closet')">closet</dd>
-			<br>
-		<dt>Floors</dt>
-			<dd id="carpets" onclick="exclude('carpets')">carpets</dd>
-			<dd id="rugs" onclick="exclude('rugs')">rugs</dd>
-			<dd id="hardwood" onclick="exclude('hardwood')">hardwood</dd>
-				<dl style="border:0px;padding: 0px 35px;background-color: unset;">
-				<dd id="vacuum" onclick="exclude('vacuum')">vacuum</dd>
-				<dd id="sweep" onclick="exclude('sweep')">sweep</dd>
-				<dd id="mop" onclick="exclude('mop')">mop</dd>
-				<dd id="disinfect1" onclick="exclude('disinfect1')">disinfect</dd>
-				<dd id="polish1" onclick="exclude('polish1')">polish</dd>
-				</dl>
-		<dt>Surfaces, fixtures, and appliances</dt>
-			<dd id="dust1" onclick="exclude('dust1')">dust</dd>
-			<dd id="disinfect2" onclick="exclude('disinfect2')">disinfect</dd>
-			<dd id="polish2" onclick="exclude('polish2')"> polish</dd>
-			<br>
-		<dt>Mirrors</dt>
-			<dd id="dust2" onclick="exclude('dust2')">dust</dd>
-			<dd id="disinfect3" onclick="exclude('disinfect3')">disinfect</dd>
-			<dd id="polish3" onclick="exclude('polish3')">polish</dd>
-			<br>
-		<dt>Trash</dt>
-			<dd>empty and change liner</dd>
-			<dd>disinfect</dd>
-			<br>
-		<dt> Baseboards</dt>
+	
+	<dl style="border:2px solid rgb(70, 22, 88);" class="center">
+	<p class="center" style="min-width:165px;max-width:190px;"><b>Service Request Form</b></p>
+	<br>
+	<br>
+	<dt onclick="select('rooms')">Rooms</dt>
+		<dd id="livingRoom" onclick="exclude('livingRoom')">living room</dd>
+		<dd id="bathRoom" onclick="exclude('bathRoom')">bathroom</dd>
+		<dd id="kitchen" onclick="exclude('kitchen')">kitchen</dd>
+		<dd id="bedRoom" onclick="exclude('bedRoom')">bedroom</dd>
+		<dd id="closet" onclick="exclude('closet')">closet</dd>
 		<br>
-		<dt> Chemical-free cleaning products</dt>
+	<dt>Floors</dt>
+		<dd id="carpets" onclick="exclude('carpets')">carpets</dd>
+		<dd id="rugs" onclick="exclude('rugs')">rugs</dd>
+		<dd id="hardwood" onclick="exclude('hardwood')">hardwood</dd>
+			<dl style="border:0px;padding: 0px 35px;background-color: unset;">
+			<dd id="vacuum" onclick="exclude('vacuum')">vacuum</dd>
+			<dd id="sweep" onclick="exclude('sweep')">sweep</dd>
+			<dd id="mop" onclick="exclude('mop')">mop</dd>
+			<dd id="disinfect1" onclick="exclude('disinfect1')">disinfect</dd>
+			<dd id="polish1" onclick="exclude('polish1')">polish</dd>
+			</dl>
+	<dt style="min-width: 235px;">Surfaces, fixtures, and appliances</dt>
+		<dd id="dust1" onclick="exclude('dust1')">dust</dd>
+		<dd id="disinfect2" onclick="exclude('disinfect2')">disinfect</dd>
+		<dd id="polish2" onclick="exclude('polish2')"> polish</dd>
 		<br>
+	<dt>Mirrors</dt>
+		<dd id="dust2" onclick="exclude('dust2')">dust</dd>
+		<dd id="disinfect3" onclick="exclude('disinfect3')">disinfect</dd>
+		<dd id="polish3" onclick="exclude('polish3')">polish</dd>
 		<br>
-		<dt class="clicker" style="width: 130px;height: 25px;margin-left:auto;margin-right:auto;" onclick="submit()">CLICK TO SUBMIT</dt>
-		</dl>
+	<dt>Trash</dt>
+		<dd style="min-width: 170px;">empty and change liner</dd>
+		<dd>disinfect</dd>
 		<br>
-		<br>
-		<br>
+	<dt> Baseboards</dt>
+	<br>
+	<dt style="min-width: 215px;"> Chemical-free cleaning products</dt>
+	<br>
+	<br>
+	<dt class="clicker" style="width: 130px;height: 25px;margin-left:auto;margin-right:auto;" onclick="submit()">CLICK TO SUBMIT</dt>
+	</dl>
+	<br>
+	<br>
+	<br>
 
-		<hr>
-		<hr>
+	<hr>
+	<hr>
 
-		<h3 id="contact">Contact Us</h3>
-		<div style="width: 500px;">
-		<b>our address:</b> <i>6159 Banner Rd SE Port Orchard, WA, 98367</i><br>
-		<b>our email:</b> <i><a href="mailto: tinahawaii@hotmail.com">donedirtcheapbytnt@tobede.tbd</a><i><br>
-		<b>our phone number:</b> <i><a tel:3607100518>(360)710-0518</a> </i>
-		</div>
+	<h3 id="contact">Contact Us</h3>
+	<div style="width: 500px;">
+	<b>our address:</b> <i>6159 Banner Rd SE Port Orchard, WA, 98367</i><br>
+	<b>our email:</b> <i><a href="mailto: tinahawaii@hotmail.com">donedirtcheapbytnt@tobede.tbd</a><i><br>
+	<b>our phone number:</b> <i><a tel:3607100518>(360)710-0518</a> </i>
+	</div>
 	
 </body>
 </html>
