--- a/service-request.html
+++ b/service-request.html
@@ -15,12 +15,12 @@
 		<tr>
 			<th><a href="index.html" style="color:white">Home</a></th>
 			<th style="min-width: 120px">Service Request</th>
-			<th style="min-width: 95px"><a href="#contact" style="color:white">Contact Us</a></h2></th>
+			<th style="min-width: 95px"><a href= "#contact" style="color:white">Contact Us</a></h2></th>
 			<th style="border:0px;background-color:transparent;"><b>(360)710-0518</b></th>
 		</tr>
 	</table>
 	
-	<dl style="border:2px solid rgb(70, 22, 88);" class="center">
+	<dl style="border:2px solid rgb(70, 22, 88); min-width: 260px" class="center">
 	<p class="center" style="min-width:165px;max-width:190px;"><b>Service Request Form</b></p>
 	<br>
 	<br>
