--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
 
 <head>
-	<link rel="icon" type="image/x-icon" href="tntlogo.ico">
-	<link rel="stylesheet" href="styles.css">
-	<script src="scripts.js"></script> 
+	<link rel="icon" type="image/x-icon" href="IMAGES/tntlogo.ico">
+	<link rel="stylesheet" href="CSS/styles.css">
+	<script src="JS/scripts.js"></script> 
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 		<th>Home</th>
 		<th style="min-width: 120px"><a href="service-request.html" style="color:white">Service Request</a></th>
 		<th style="min-width: 95px"><a href="#contact" style="color:white">Contact Us</a></h2></th>
-		<th style="border:0px;background-color:transparent;"><b>(360)710-0518</b></th>
+		<th style="border:0px;background-color:transparent;"><b>(555)555-0518</b></th>
 		</tr>
 	</table>
     <br>
