--- a/service-request.html
+++ b/service-request.html
@@ -5,9 +5,9 @@
 
 <head>
 	<h1>Done Dirt Cheap <small>by TNT <small>PLLC</small></small></h1>
-	<link rel="icon" type="image/x-icon" href="tntlogo.ico">
-	<link rel="stylesheet" href="styles.css">
-	<script src="scripts.js"></script> 
+	<link rel="icon" type="image/x-icon" href="IMAGES/tntlogo.ico">
+	<link rel="stylesheet" href="CSS/styles.css">
+	<script src="JS/scripts.js"></script> 
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 			<th><a href="index.html" style="color:white">Home</a></th>
 			<th style="min-width: 120px">Service Request</th>
 			<th style="min-width: 95px"><a href= "#contact" style="color:white">Contact Us</a></h2></th>
-			<th style="border:0px;background-color:transparent;color:gray;"><b>(360)710-0518</b></th>
+			<th style="border:0px;background-color:transparent;color:gray;"><b>(555)555-0518</b></th>
 		</tr>
 	</table>
 	<p class="center" style="text-align: center; min-width:260px;background-color:rgb(242, 71, 79);border:0px;"><b>Service Request Form</b></p>
@@ -72,7 +72,7 @@
 	<div style="width: 500px;">
 	<b>our address:</b> <i>6159 Banner Rd SE Port Orchard, WA, 98367</i><br>
 	<b>our email:</b> <i><a href="mailto: tinahawaii@hotmail.com">donedirtcheapbytnt@tobede.tbd</a><i><br>
-	<b>our phone number:</b> <i><a tel:3607100518>(360)710-0518</a> </i>
+	<b>our phone number:</b> <i><a tel:3607100518>(555)555-0518</a> </i>
 	</div>
 	
 </body>
