--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
     <h3 id="contact">Contact Us</h3>
     <div style="width: 500px;">
-    <b>our address:</b> <i>Business Address </i><br>
+    <b>our address:</b> <i>123 Business Address</i><br>
     <b>our email:</b> <i><a href="mailto: tinahawaii@hotmail.com">tinaayers@donedirtcheapbytnt.com</a><i><br>
-    <b>our phone number:</b> <i>(555)555-0518</a> </i>
+    <b>our phone number:</b> <i>(555)555-0518</i>
     </div>
 
 </body>
