--- a/service-request.html
+++ b/service-request.html
@@ -70,8 +70,8 @@
 
 	<h3 id="contact">Contact Us</h3>
 	<div style="width: 500px;">
-	<b>our address:</b> <i>6159 Banner Rd SE Port Orchard, WA, 98367</i><br>
-	<b>our email:</b> <i><a href="mailto: tinahawaii@hotmail.com">donedirtcheapbytnt@tobede.tbd</a><i><br>
+	<b>our address:</b> <i>123 Business Address</i><br>
+	<b>our email:</b> <i><a href="mailto: tinahawaii@hotmail.com">tinaayers@donedirtcheapbytnt.com</a><i><br>
 	<b>our phone number:</b> <i><a tel:3607100518>(555)555-0518</a> </i>
 	</div>
 	
