--- a/service-request.html
+++ b/service-request.html
@@ -4,19 +4,33 @@
 <title>Done Dirt Cheap by TNT PLLC</title>
 
 <head>
-	<h1>Done Dirt Cheap <small>by TNT <small>PLLC</small></small></h1>
 	<link rel="icon" type="image/x-icon" href="IMAGES/tntlogo.ico">
 	<link rel="stylesheet" href="CSS/styles.css">
 	<script src="JS/scripts.js"></script> 
+    <img src="IMAGES/american-flag-desktop-background.jpg" style="float:left">
+    
+    <meta charset="UTF-8">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Home Cleaning, Done Dirt Cheap, Cheap">
+    <meta name="description" content="A home cleaning service">
+    <meta http-equiv="refresh" content="30">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Charles Jacobs, Jr">
 </head>
 
+
 <body>
+	<div>
+		<h1 class="center" style="width: 90%">Done Dirt Cheap <small>by TNT <small>PLLC</small></small></h1>
+	</div>
+	<br>
+	<hr>
+	<br>
 	<table class="center">
 		<tr>
-			<th><a href="index.html" style="color:white">Home</a></th>
+			<th><a href="index.html">Home</a></th>
 			<th style="min-width: 120px">Service Request</th>
-			<th style="min-width: 95px"><a href= "#contact" style="color:white">Contact Us</a></h2></th>
-			<th style="border:0px;background-color:transparent;color:gray;"><b>(555)555-0518</b></th>
+			<th style="min-width: 95px"><a href= "#contact">Contact Us</a></h2></th>
+			<th><b>(360)710-0518</b></th>
 		</tr>
 	</table>
 	<p class="center" style="text-align: center; min-width:260px;background-color:rgb(242, 71, 79);border:0px;"><b>Service Request Form</b></p>
@@ -68,12 +82,14 @@
 	<hr>
 	<hr>
 
-	<h3 id="contact">Contact Us</h3>
-	<div style="width: 500px;">
-	<b>our address:</b> <i>123 Business Address</i><br>
-	<b>our email:</b> <i><a href="mailto: tinahawaii@hotmail.com">tinaayers@donedirtcheapbytnt.com</a><i><br>
-	<b>our phone number:</b> <i><a tel:3607100518>(555)555-0518</a> </i>
-	</div>
+	<div style="border:none;background-color:transparent;">
+        <h3 id="contact" style="color:gray">Contact Us</h3>
+        <div class="box" style="width: 500px;">
+            <b>our address:</b> <i>[insert address here]</i><br>
+            <b>our email:</b> <i><a href="mailto: tinahawaii@hotmail.com">tinahawaii@hotmail.com</a><i><br>
+            <b>our phone number:</b> <i><a tel:3607100518>(360)710-0518</a> </i>
+        </div>
+    </div>
 	
 </body>
 </html>
