--- a/index.html
+++ b/index.html
@@ -19,30 +19,41 @@
 </head>
 
 <body>
-    <div style="width:70%">
+
+    <!--This is the title for the whole site-->
+    <div class="center titleCard">
         <div class="dropdown" style="float:right;">
             <p class="dropbtn">MENU</p>
             <div class="dropdown-content">
               <a href="#">Home</a>
+              <a href="#promise">Our Promise</a>
               <a href="service-request.html">Service Request</a>
               <a href="#contact">Contact Us</a>
             </div>
           </div>
         <h1 class="center" style="width: 90%">Done Dirt Cheap <small>by TNT <small>PLLC</small></small></h1>
+        <h2 class="center" style="width:100%">Port Orchard, Washington - 360.710.0518 </h2>
     </div>
-    <br>
-    <hr>
-    <br>
-
-    <table id="this" class="center">
-		<tr>
-		<th>Home</th>
-		<th style="min-width: 120px"><a href="service-request.html">Service Request</a></th>
-		<th style="min-width: 95px"><a href="#contact">Contact Us</a></h2></th>
-		<th><b>(360)710-0518</b></th>
-		</tr>
-	</table>
     
+    <div>
+        <iframe src="IMAGES/before.png" title="photo frame" class="photoFrame"></iframe>
+    </div>
+
+
+    <div id="promise">
+        <h3>Our Promise</h3>
+        <div>
+            <p>This is our promise to you.</p>
+            <p>This is our promise to you.</p>
+            <p>This is our promise to you.</p>
+            <p>This is our promise to you.</p>
+            <p>This is our promise to you.</p>
+            <p>This is our promise to you.</p>
+        </div>
+        <br>
+
+    </div>
+
     <br>
     <hr>
     <hr>
