--- a/service-request.html
+++ b/service-request.html
@@ -19,20 +19,20 @@
 
 
 <body>
-	<div>
-		<h1 class="center" style="width: 90%">Done Dirt Cheap <small>by TNT <small>PLLC</small></small></h1>
-	</div>
-	<br>
-	<hr>
-	<br>
-	<table class="center">
-		<tr>
-			<th><a href="index.html">Home</a></th>
-			<th style="min-width: 120px">Service Request</th>
-			<th style="min-width: 95px"><a href= "#contact">Contact Us</a></h2></th>
-			<th><b>(360)710-0518</b></th>
-		</tr>
-	</table>
+
+	<!--This is the title for the whole site-->
+    <div class="center titleCard">
+        <div class="dropdown" style="float:right;">
+            <p class="dropbtn">MENU</p>
+            <div class="dropdown-content">
+              <a href="index.html">Home</a>
+              <a href="service-request.html">Service Request</a>
+              <a href="#contact">Contact Us</a>
+            </div>
+          </div>
+        <h1 class="center" style="width: 90%">Done Dirt Cheap <small>by TNT <small>PLLC</small></small></h1>
+    </div>
+
 	<p class="center" style="text-align: center; min-width:260px;background-color:rgb(242, 71, 79);border:0px;"><b>Service Request Form</b></p>
 	<dl style="border:2px solid rgb(70, 22, 88); min-width: 260px" class="center">
 	<br>
