--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="author" content="Charles Jacobs, Jr">
 </head>
 
-<body>
+<body class="center" style="width:90%">
 
     <!--This is the title for the whole site-->
     <div class="center titleCard">
@@ -36,7 +36,8 @@
     </div>
     
     <div>
-        <iframe src="IMAGES/before.png" title="photo frame" class="photoFrame"></iframe>
+        <button onclick="change_image('photoFrame1')" style="float:left">transform</button>
+        <iframe id="photoFrame1" src="IMAGES/before.png" title="photo frame" class="photoFrame"></iframe>
     </div>
 
 
@@ -63,7 +64,7 @@
         <h3 id="contact">Contact Us</h3>
         <div class="box" style="width: 500px;">
             <b>our address:</b> <i>[insert address here]</i><br>
-            <b>our email:</b> <i><a href="mailto: tinahawaii@hotmail.com">tinahawaii@hotmail.com</a><i><br>
+            <b>our email:</b> <i><a href="mailto: donedirtcheapbytnt@gmail.com">donedirtcheapbytnt@gmail.com</a><i><br>
             <b>our phone number:</b> <i><a tel:3607100518>(360)710-0518</a> </i>
         </div>
     
