--- a/service-request.html
+++ b/service-request.html
@@ -78,6 +78,13 @@
 	<br>
 	<br>
 	<br>
+	<form action="/action_page.php" method="get">
+		<label for="fname">First name:</label>
+		<input type="text" id="fname" name="fname"><br><br>
+		<label for="lname">Last name:</label>
+		<input type="text" id="lname" name="lname"><br><br>
+		<input type="submit" value="Submit">
+	  </form>
 
 	<hr>
 	<hr>
@@ -86,7 +93,7 @@
         <h3 id="contact" style="color:gray">Contact Us</h3>
         <div class="box" style="width: 500px;">
             <b>our address:</b> <i>[insert address here]</i><br>
-            <b>our email:</b> <i><a href="mailto: tinahawaii@hotmail.com">tinahawaii@hotmail.com</a><i><br>
+            <b>our email:</b> <i><a href="mailto: donedirtcheapbytnt@gmail.com">donedirtcheapbytnt@gmail.com</a><i><br>
             <b>our phone number:</b> <i><a tel:3607100518>(360)710-0518</a> </i>
         </div>
     </div>
