--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <button onclick="sendRequest()" id="sendRequest">Send Request</button>
     </div>
     <!-- the before and after frame-->
-    <div class="photoFrame">
+   <!-- <div class="photoFrame">
         <button onclick="change_image('photoFrame1')">transform</button>
         <iframe id="photoFrame1" src="IMAGES/before.png" title="photo frame" class="photoFrame"></iframe>
-    </div>
+    </div> -->
 
 
     <div>
